# analysing_pii_leakage

./: fine_tune_dp8.sh  fine_tune_scrubbed.sh  fine_tune_undefended.sh  requirements.txt  setup.cfg
configs/evaluate/: pii-extraction.yml  pii-inference.yml
configs/fine-tune/: .echr-gpt2-small-undefended.yml.swp  echr-gpt2-small-dp8.yml  echr-gpt2-small-scrubbed.yml  echr-gpt2-small-undefended.yml
configs/pii-extraction/: echr-gpt2-small-dp8.yml  echr-gpt2-small-scrubbed.yml  echr-gpt2-small-undefended.yml
configs/pii-inference/: echr-gpt2-small-dp8.yml  echr-gpt2-small-scrubbed.yml  echr-gpt2-small-undefended.yml
configs/pii-reconstruction/: echr-gpt2-small-dp8.yml  echr-gpt2-small-scrubbed.yml  echr-gpt2-small-undefended.yml
examples/: fine_tune.py
src/pii_leakage/arguments/: dataset_args.py  ner_args.py  trainer_args.py
src/pii_leakage/attacks/extraction/: naive_extraction.py
src/pii_leakage/attacks/inference/: perpexity_inference.py
src/pii_leakage/attacks/reconstruction/: perplexity_reconstruction.py
src/pii_leakage/models/: language_model.py
src/pii_leakage/utils/: callbacks.py
