[metadata]
    name        = pii-leakage
    version     = 0.1.0
    description = Analyzing PII leakage in LMs 
    url         = https://github.com/microsoft/analysing_pii_leakage
    author      = Nils Lukas
    author_email= nlukas@uwaterloo.ca
    license     = MIT License

[options]
package_dir=
    =src
packages=find:
install_requires = 
    transformers
    tqdm
    flair @ git+https://github.com/flairNLP/flair@00d9d49c472e1fabba8b692f4e8542198e9c3dff
    dp_transformers @ git+https://github.com/microsoft/dp-transformers.git@0358f699be12e8503251e131c6fbf25590cf35eb
    opacus

[options.packages.find]
where=src
